feat: task 4.3 and 4.4
